<resources>
    <string name="app_name">ShowsTGNLimpio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inici</string>
    <string name="menu_registre">Registrat</string>
    <string name="menu_login">Inicia Sessio</string>
    <string name="group_items_head">Sessio</string>
    <string name="menu_tanca_sessio">Tanca Sessio</string>
    <string name="menu_carrito">Carrito</string>
    <string name="menu_perfil">Perfil</string>
</resources>