<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.insbaixcamp.tarragona.concert.theater.opera.movies.comedia.show.showstgnlimpio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_registre"
        android:name="org.insbaixcamp.tarragona.concert.theater.opera.movies.comedia.show.showstgnlimpio.ui.registre.RegistreFragment"
        android:label="@string/menu_registre"
        tools:layout="@layout/fragment_registre" />

    <fragment
        android:id="@+id/nav_login"
        android:name="org.insbaixcamp.tarragona.concert.theater.opera.movies.comedia.show.showstgnlimpio.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_carrito"
        android:name="org.insbaixcamp.tarragona.concert.theater.opera.movies.comedia.show.showstgnlimpio.ui.carrito.CarritoFragment"
        android:label="Carrito"
        tools:layout="@layout/fragment_carrito" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="org.insbaixcamp.tarragona.concert.theater.opera.movies.comedia.show.showstgnlimpio.ui.perfil.PerfilFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_event"
        android:name="org.insbaixcamp.tarragona.concert.theater.opera.movies.comedia.show.showstgnlimpio.ui.event.EventFragment"
        tools:layout="@layout/fragment_event" />
</navigation>